[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/mod_tool/interface/global/input_string_multiline.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/mod_tool/interface/global/input_string.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/mod_tool/interface/manifest_editor/manifest_editor.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.15, 0.1725, 0.2325, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.1, 0.115, 0.155, 1 )

[node name="ModManifest" type="PanelContainer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_right = 1906.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBox/HBox2"]
margin_top = 13.0
margin_right = 1557.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Metadata required for your mod"

[node name="ErrorLabel" type="Label" parent="VBox/HBox2"]
unique_name_in_owner = true
margin_left = 1561.0
margin_top = 13.0
margin_right = 1665.0
margin_bottom = 27.0
text = "Manifest is valid"

[node name="ShouldValidate" type="CheckButton" parent="VBox/HBox2"]
unique_name_in_owner = true
margin_left = 1669.0
margin_right = 1745.0
margin_bottom = 40.0
pressed = true
flat = true

[node name="VSeparator" type="VSeparator" parent="VBox/HBox2"]
margin_left = 1749.0
margin_right = 1753.0
margin_bottom = 40.0

[node name="SaveManifest" type="Button" parent="VBox/HBox2"]
margin_left = 1757.0
margin_right = 1906.0
margin_bottom = 40.0
text = "Save to manifest.json"

[node name="Panel" type="PanelContainer" parent="VBox"]
margin_top = 44.0
margin_right = 1906.0
margin_bottom = 1066.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1898.0
margin_bottom = 1014.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="InputVBox" type="VBoxContainer" parent="VBox/Panel/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1890.0
margin_bottom = 548.0
size_flags_horizontal = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Category" type="LineEdit" parent="VBox/Panel/ScrollContainer/InputVBox"]
margin_right = 1890.0
margin_bottom = 24.0
mouse_filter = 2
mouse_default_cursor_shape = 0
text = "Manifest"
align = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="ModName" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 28.0
margin_right = 1890.0
margin_bottom = 52.0
hint_tooltip = "Name of the Mod.
Only letters, numbers and underscores allowed."
mouse_default_cursor_shape = 16
is_required = true
key = "name"
label_text = "Mod Name"
hint_text = "Name of the Mod.
Only letters, numbers and underscores allowed."

[node name="Namespace" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 56.0
margin_right = 1890.0
margin_bottom = 80.0
hint_tooltip = "Namespace of the Mod.
Often just the main author or team name.
Only letters, numbers and underscores allowed."
mouse_default_cursor_shape = 16
is_required = true
key = "namespace"
label_text = "Namespace"
hint_text = "Namespace of the Mod.
Often just the main author or team name.
Only letters, numbers and underscores allowed."

[node name="Version" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 84.0
margin_right = 1890.0
margin_bottom = 108.0
hint_tooltip = "Semantic version string.
Only integers and periods allowed.
Format: {major}.{minor}.{patch}
For reference, see https://semver.org"
mouse_default_cursor_shape = 16
is_required = true
key = "version_number"
label_text = "Version"
input_text = "0.0.1"
hint_text = "Semantic version string.
Only integers and periods allowed.
Format: {major}.{minor}.{patch}
For reference, see https://semver.org"

[node name="WebsiteUrl" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 112.0
margin_right = 1890.0
margin_bottom = 136.0
hint_tooltip = "URL for your website or repository."
mouse_default_cursor_shape = 16
key = "website_url"
label_text = "Mod website URL"
input_placeholder = "https://example.com"
hint_text = "URL for your website or repository."

[node name="Dependencies" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 140.0
margin_right = 1890.0
margin_bottom = 164.0
hint_tooltip = "Comma-separated list of mod IDs.
Only letters, numbers and underscores allowed.
A single dash in the middle is required.
Format: {namespace}-{name}"
mouse_default_cursor_shape = 16
key = "dependencies"
label_text = "Dependencies"
input_placeholder = "Namespace-ModName, Author-Name"
hint_text = "Comma-separated list of mod IDs.
Only letters, numbers and underscores allowed.
A single dash in the middle is required.
Format: {namespace}-{name}"

[node name="Description" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 168.0
margin_right = 1890.0
margin_bottom = 380.0
key = "description"
label_text = "Description"

[node name="Category2" type="LineEdit" parent="VBox/Panel/ScrollContainer/InputVBox"]
margin_top = 384.0
margin_right = 1890.0
margin_bottom = 408.0
mouse_filter = 2
mouse_default_cursor_shape = 0
text = "Manifest Extra"
align = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="Authors" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 412.0
margin_right = 1890.0
margin_bottom = 436.0
hint_tooltip = "Comma-separated list of Authors"
mouse_default_cursor_shape = 16
key = "authors"
label_text = "Authors"
input_placeholder = "Author1, Autor2"
hint_text = "Comma-separated list of Authors"

[node name="Incompatibilities" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 440.0
margin_right = 1890.0
margin_bottom = 464.0
hint_tooltip = "Comma-separated list of mod IDs.
Only letters, numbers and underscores allowed.
A single dash in the middle is required.
Format: {namespace}-{name}"
mouse_default_cursor_shape = 16
key = "incompatibilities"
label_text = "Incompatible Mods"
input_placeholder = "Namespace-ModName, Author-Name"
hint_text = "Comma-separated list of mod IDs.
Only letters, numbers and underscores allowed.
A single dash in the middle is required.
Format: {namespace}-{name}"

[node name="CompatibleGameVersions" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 468.0
margin_right = 1890.0
margin_bottom = 492.0
hint_tooltip = "Comma-separated list of valid game versions."
mouse_default_cursor_shape = 16
key = "compatible_game_version"
label_text = "Compatible Game Versions"
input_placeholder = "1.0.0, 1.2.0"
hint_text = "Comma-separated list of valid game versions."

[node name="CompatibleModLoaderVersions" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 496.0
margin_right = 1890.0
margin_bottom = 520.0
hint_tooltip = "Comma-separated list of ModLoader versions."
mouse_default_cursor_shape = 16
is_required = true
key = "compatible_mod_loader_version"
label_text = "Compatible Mod Loader Versions"
input_placeholder = "5.0.0, 4.1.0"
hint_text = "Comma-separated list of ModLoader versions."

[node name="Tags" parent="VBox/Panel/ScrollContainer/InputVBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 524.0
margin_right = 1890.0
margin_bottom = 548.0
hint_tooltip = "Compatible ModLoader Versions"
mouse_default_cursor_shape = 16
key = "tags"
label_text = "Tags"
input_placeholder = "Tag1, Tag2"
hint_text = "Compatible ModLoader Versions"

[connection signal="pressed" from="VBox/HBox2/SaveManifest" to="." method="_on_SaveManifest_pressed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/ModName" to="." method="_on_ModName_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/Namespace" to="." method="_on_Namespace_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/Version" to="." method="_on_Version_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/WebsiteUrl" to="." method="_on_WebsiteUrl_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/Dependencies" to="." method="_on_Dependencies_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/Description" to="." method="_on_Description_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/Authors" to="." method="_on_Authors_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/Incompatibilities" to="." method="_on_Incompatibilities_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/CompatibleGameVersions" to="." method="_on_CompatibleGameVersions_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/CompatibleModLoaderVersions" to="." method="_on_CompatibleModLoaderVersions_input_text_changed"]
[connection signal="input_text_changed" from="VBox/Panel/ScrollContainer/InputVBox/Tags" to="." method="_on_Tags_input_text_changed"]
